Avatars Group - -  put low z-index to solve layer bug

--- a/packages/ui/src/8-grids/_grid-code.scss
+++ b/packages/ui/src/8-grids/_grid-code.scss
@@ -7,7 +7,6 @@
   column-gap: pxToRem(8);
   align-content: start;
 
-  color: hsl(var(--color-neutral-0));
   font-family: var(--code-font);
 
   counter-reset: lineNumbers;
